--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -3,6 +3,8 @@
 @import url('footer.css');
 @import url('header.css');
 @import url('annoumcments.css');
+@import url('announcment-info.css');
+@import url('announcment-creation.css');
 @import url('auth.css');
 
 html, body {
