--- a/src/frontend/css/filters.css
+++ b/src/frontend/css/filters.css
@@ -38,9 +38,8 @@
     padding-bottom: 0.7em;
 }
 
-.filter-block .wrapper {
+.filter-block .filter-wrapper {
     display: inline-block;
-    background: #F7F7F7;
     border: 0.5px solid rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     font-family: 'Comfortaa', sans-serif;
@@ -73,7 +72,7 @@ li {
     transition: transform 0.3s linear;
 }
 
-.filter-block .wrapper.active .select-btn i {
+.filter-block .filter-wrapper.active .select-btn i {
     transform: rotate(-180deg);
 }
 
@@ -85,7 +84,7 @@ li {
     border-radius: 5px;
 }
 
-.filter-block .wrapper.active .content {
+.filter-block .filter-wrapper.active .content {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -510,7 +509,7 @@ li.selected {
 
 @media screen and (max-width: 1000px) {
     
-    .filter-block .wrapper {
+    .filter-block .filter-wrapper {
         margin-left: 1%;
     }
     
@@ -794,7 +793,7 @@ li.selected {
 
 @media screen and (max-width: 900px) {
 
-    .filter-block .wrapper {
+    .filter-block .filter-wrapper {
         margin-right: 1.5%;
     }
 
@@ -825,7 +824,7 @@ li.selected {
 
 @media screen and (max-width: 600px) {
 
-    .filter-block .wrapper {
+    .filter-block .filter-wrapper {
         display: none;
     }
 
