--- a/src/frontend/scss/announcment-info.scss
+++ b/src/frontend/scss/announcment-info.scss
@@ -2,7 +2,7 @@
     padding-top: 1em;
     padding-bottom: 1em;
 
-    .wrapper {
+    .announcement-info-wrapper {
         width: 100%;
         height: 100%;
         display: flex;
@@ -189,7 +189,7 @@
 
     .main {
 
-        .wrapper {  
+        .announcement-info-wrapper {
             display: flex;
             flex-direction: row-reverse;
 
@@ -257,7 +257,7 @@
 
     .main {
 
-        .wrapper {
+        .announcement-info-wrapper {
             display: flex;
             flex-direction: column;
 
@@ -328,7 +328,7 @@
 
     .main {
 
-        .wrapper {
+        .announcement-info-wrapper {
 
             .info {
 
@@ -390,7 +390,7 @@
 @media screen and (max-width:650px) {
 
     .main {
-        .wrapper {
+        .announcement-info-wrapper {
             .swiper {
                 height: 350px;
             }
