--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -4,6 +4,7 @@
 @import url('header.css');
 @import url('annoumcments.css');
 @import url('announcment-info.css');
+@import url('announcment-creation.css');
 @import url('auth.css');
 
 html, body {
