--- a/EcoworldOnLaravel/resources/css/announcment-info.css
+++ b/EcoworldOnLaravel/resources/css/announcment-info.css
@@ -68,7 +68,7 @@
 }
 
 .main .announcement-info-wrapper .info__description .desc__header .desc__header__img {
-  content: url("../../images/arrow-down.svg");
+  content: url("../../public/images/arrow-down.svg");
   max-width: 20px;
   max-height: 20px;
   margin-left: auto;
