--- a/lab6/public/css/style.css
+++ b/lab6/public/css/style.css
@@ -61,7 +61,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 25px;
 }
 
-body:-webkit-scrollbar-thumb:hover {
+body::-webkit-scrollbar-thumb:hover {
     background: #b3b3b3;
 }
 
